--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-app.name = RestDemo App
-server.port = 9336
+app.name=RestDemo App
+server.port=9336
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.username=root
+spring.datasource.password=mysqlroot123
+spring.jpa.database=mysql
