--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=root
 spring.datasource.password=mysqlroot123
 spring.jpa.database=mysql
+spring.jpa.show-sql = true
