--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=mysqlroot123
 spring.jpa.database=mysql
 spring.jpa.show-sql = true
+
+#logging.level.root=debug
+#logging.level.com.example.controller=trace
